# Question-Back-

./: README.md  agent.md  agents.md  architecture.md  context.md  execution.md  pyproject.toml  requirements.txt  sample_python.py  tasks.md  validation.md
book_ingestion_system/: .env.example  .gitignore  config.py  main.py  requirements.txt  test_pages.py
book_ingestion_system/database/: bulk_insert.py  connection.py
book_ingestion_system/models/: question_schema.py
book_ingestion_system/pipeline/: answer_key_parser.py  difficulty_classifier.py  pdf_to_images.py  question_answer_merger.py  question_extractor.py  self_healing_engine.py  topic_tagger.py  validator.py  vision_page_parser.py
book_parser/: __init__.py  config.py  main.py  orchestrator.py  schemas.py
book_parser/agents/: answer_agent.py  structuring_agent.py  validator_agent.py  vision_agent.py
book_parser/database/: bulk_insert.py  connection.py
book_parser/pipeline/: answer_parser.py  difficulty_classifier.py  pdf_to_images.py  question_parser.py  validator.py  vision_extractor.py
